<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="86dp">

    <TextView
        android:id="@+id/step_short_description"
        style="@style/Widget.Label"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        tools:text="Recipe Introduction" />

    <ImageView
        android:id="@+id/thumbnail_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.v7.widget.CardView>